# bailey-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  design-qa.md
.github/canary/: fake_openai.py
.github/workflows/: canary.yml  ci.yml  deny.yml  desktop-production-release.yml  desktop-release.yml  release.yml  size-check.yml  test.yml
audit/2026-07-10-conversation-flow/: audit.md
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/scripts/: prepare-product-runtime.mjs  prepare-sidecar.mjs
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: account.rs  cloud_records.rs  lib.rs  main.rs  sidecar.rs
docs/: PLUGIN-PROTOCOL.md  app-server-protocol.md  desktop-release.md
npm/: README.md  package.json
src/: cli.rs  cli_args.rs  constants.rs  errors.rs  key_resolution.rs  lib.rs  main.rs  run.rs  style.rs
src/agent/: apply_patch.rs  ask.rs  checkpoint.rs  compaction.rs  engine.rs  file_tracker.rs  grant_store.rs  guards.rs  hooks.rs  jobs.rs  lsp.rs  mcp.rs  mcp_import.rs  mod.rs  notes.rs  packs.rs  plan.rs  protocol.rs  request.rs  retry.rs  review.rs  sandbox.rs  secrets_guard.rs  serve_client.rs  skills.rs  subagents.rs  system_prompt.rs  tokens.rs  tool_repair.rs  tools.rs  verify.rs
src/app_server/: cloud_records.rs  mod.rs  protocol.rs  session.rs  ui.rs
src/commands/: account.rs  aivo_guide.md  alias.rs  app_server.rs  chat.rs  chat_agent_oneshot.rs  chat_request_builder.rs  chat_response_parser.rs  chat_tui.rs  chat_tui_format.rs  code.rs  code_agent_oneshot.rs  code_request_builder.rs  code_response_parser.rs  code_tui.rs  code_tui_format.rs  guide.rs  hf.rs  info.rs  keys.rs  login.rs  logs.rs  mcp.rs  mod.rs  models.rs  plugins.rs  run.rs  serve.rs  share.rs  skills.rs  start.rs  stats.rs  update.rs
src/data/: model_limits.json  providers.json
src/plugin/: endpoint.rs  manifest.rs  mod.rs  registry.rs  source.rs  stats.rs
src/services/: account_store.rs  acp_client.rs  ai_launcher.rs  anthropic_chat_request.rs  anthropic_chat_response.rs  (+68 more)
tests/: app_server_stdio.rs  cli_parsing.rs  cli_smoke.rs  model_names.rs  plugin_endpoint.rs  plugin_install.rs  router_e2e.rs  sandbox_linux.rs
(+40 files in other folders)
