[package]
name = "bailey-desktop"
version = "0.2.0"
description = "Bailey local agent desktop client"
authors = ["Bailey Use"]
edition = "2024"
rust-version = "1.95"

[lib]
name = "bailey_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3"
tokio = { version = "1", features = ["sync"] }
