[package]
name = "bailey-desktop"
version = "0.2.0"
description = "Bailey local agent desktop client"
authors = ["Bailey Use"]
edition = "2024"
rust-version = "1.95"

[lib]
name = "bailey_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "stream", "system-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
